--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,15 @@
 [submodule "solidity_study_and_homework/solidity_homework/homework_2/lib/forge-std"]
 	path = solidity_study_and_homework/solidity_homework/homework_2/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "solidity_study_and_homework/solidity_homework/homework_3/lib/forge-std"]
+	path = solidity_study_and_homework/solidity_homework/homework_3/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts"]
+	path = solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "solidity_study_and_homework/solidity_homework/homework_3/lib/chainlink-brownie-contracts"]
+	path = solidity_study_and_homework/solidity_homework/homework_3/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts-upgradeable"]
+	path = solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
