--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts-upgradeable"]
 	path = solidity_study_and_homework/solidity_homework/homework_3/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "backend_homework/contracts/lib/forge-std"]
+	path = backend_homework/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
