--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,12 @@
 [submodule "backend_homework/contracts/lib/forge-std"]
 	path = backend_homework/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contract_homework/homework_2/lib/openzeppelin-contracts-upgradeable"]
+	path = contract_homework/homework_2/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+[submodule "contract_homework/homework_2/lib/openzeppelin-contracts"]
+	path = contract_homework/homework_2/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "contract_homework/homework_2/lib/forge-std"]
+	path = contract_homework/homework_2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
